# osu-sync

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.ps1  osu!sync.cpp.sln  servercode.cpp
.github/: changelog-config.js  changelog.config.mjs
.github/scripts/: normalize-commits.sh
.github/workflow/: release.yml
.github/workflows/: release.yml
beatmapDownloader/: DownloadManager.cs  Logger.cs  MirrorConfig.cs  Program.cs  beatmapDownloader.csproj
beatmapDownloader/Properties/: launchSettings.json
libUnitText/: libUnitText.vcxproj  libUnitText.vcxproj.filters  main.cpp  test.json  vcpkg.json
osu!syn.server/: CMakeLists.txt  build.sh  config.json  logger.cpp  logger.h  logger.hpp  main.cpp  osu!syn.server.vcxproj  server.cpp  server.h  server.hpp  tokenCopy.html
osu!sync.core/: CMakeLists.txt  Logger.cpp  Logger.h  apiRequest.cpp  apiRequest.hpp  archiveManager.cpp  archiveManager.hpp  beatmapSetAttribute.hpp  beatmap_importer.cpp  beatmap_importer.h  beatmap_importer.hpp  beatmap_types.h  beatmap_types.hpp  collection_downloader.cpp  collection_downloader.h  collection_downloader.hpp  configs.h  coreExpections.h  errcodes.hpp  fsutils.windows.cpp  fsutils.windows.h  fsutils.windows.hpp  globalUsed.h  main.cpp  network.utils.cpp  network.utils.h  network.utils.hpp  osu!sync.core.rc  osu!sync.windows.vcxproj  osu!sync.windows.vcxproj.filters  osuInstance.cpp  osuInstance.hpp  resource.h  stableExporter.cpp  stableExporter.h  stableExporter.hpp  stableImporter.cpp  stableImporter.h  systemUtils.hpp  uploadArchive.cpp  (+2 more)
osu!sync.core/3rdpartyInclude/cpprealm/: version_numbers.hpp
osu!sync.core/3rdpartyLib/: cpprealm-dbg.lib  libuv.lib  realm-dbg.lib
osu!sync.core/messageFiles/: languagelists.json
osu!sync.core/messageFiles/zh-cn/: Invaldargs.txt  invalidArgs.txt  noArgs.txt  usage.txt
osu!sync.windows/: fsutils.windows.cpp  fsutils.windows.h  network.utils.h  vcpkg.json
osu!sync.windows/3rdpartyInclude/cpprealm/internal/bridge/: bridge_types.hpp
osu!sync.windows/3rdpartyInclude/cpprealm/util/: config.h
osu!sync.windows/3rdpartyInclude/realm/util/: config.h
osu!sync.windows/3rdpartyLib/: realm-ffi-static-dbg.lib  realm-object-store-dbg.lib  realm-parser-dbg.lib  uv.lib
osu.sync.CUI/: ErrorCodes.cpp  ErrorCodes.h  ModuleManager.cpp  ModuleManager.h  main.cpp  osu.sync.CUI.vcxproj
stableNewExporter/: experimental.stableExporter.csproj  main.cs
stbDbReaderCore/: Program.cs  stbDbReaderCore.csproj
